Opened 16 years ago
Closed 8 years ago
#3438 closed bug (fixed)
Visual glitch : renaming filenames
Reported by: | mmadia | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
Keywords: | gci2011 | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
When editing a filename on the desktop, if the filename extends beyond the left or right screen boundaries, then the text input field will not shrink when characters are deleted.
At one point, I was able to replicate this in a Tracker browser window. However, the desktop case is easier to replicate.
rev 29153, gcc2, bare metal.
Attachments (1)
Change History (9)
comment:1 by , 16 years ago
comment:3 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
by , 8 years ago
Attachment: | 0001-Tracker-always-shrink-the-text-input-when-renaming.patch added |
---|
comment:4 by , 8 years ago
patch: | 0 → 1 |
---|
comment:5 by , 8 years ago
My patch is probably not perfect, but it is the best I could do after some hours at it. There's a possibility it may introduce other glitches, but in my testing I couldn't find any.
It should be enough to at least give an idea of how this problem can be solved.
comment:6 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | in-progress → assigned |
comment:7 by , 8 years ago
I don't know a whole lot about the code in question here in particular, but I'll try to take a look at this at some point soonish.
comment:8 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev50895. Thanks for the patch!
this happens to me too on 29182.